[package]
name = "axiom-forest-walk"
description = "Axiom app: first-person browser/WASM walk through the prologue_postcard_001 forest diorama, extracted from the merged apps/axiom-gallery crate. The champion visual-target manifest is baked into the bundle, built into deterministic render batches by the app-local diorama builder (terrain-mesh heightfield + entropy/space scatter), and presented live through axiom-windowing with WASD + mouse-look via axiom-fp-controller. Composition leaf: its own wasm bundle + web page."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# `cdylib` for the app's own wasm bundle (the `forest_walk_start` /
# `overlay_start` entries); `rlib` so the native test suite compiles and
# exercises the pure diorama builder.
[lib]
crate-type = ["cdylib", "rlib"]

# Native + wasm dependencies: the pure diorama builder (manifest → render
# batches) builds on native so `cargo test` exercises it, and on wasm for the
# live browser arm. Paths are `../../{crates,modules}` because the app sits at
# the same `apps/<name>` depth the gallery does.
[dependencies]
# Dimensioned scalars (Meters/Radians/Ratio) for the camera pose and lens.
axiom-kernel = { path = "../../crates/axiom-kernel" }
# Mat4/Quat/Transform/Vec3 for instance transforms and the view-projection.
axiom-math = { path = "../../crates/axiom-math" }
# Frame settings vocabulary (ambient, post-process, volumetrics, capabilities)
# the diorama builder emits alongside its batches.
axiom-host = { path = "../../crates/axiom-host" }
# Deterministic, address-keyed entropy streams for the vegetation scatter.
axiom-entropy = { path = "../../crates/axiom-entropy" }
# Spatial addressing (cell keys) for the scatter's entropy addresses.
axiom-space = { path = "../../crates/axiom-space" }
# The domain-neutral heightfield mesher: grid config + a height callback in,
# positions/normals/indices out. The builder decorates the neutral mesh with
# the manifest's ground bands and colours.
axiom-terrain-mesh = { path = "../../modules/axiom-terrain-mesh" }
# The versioned scene manifest is TOML deserialized via serde derive.
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Browser/live arm only: the wasm-bindgen glue, panic hook, the first-person
# walk controller, the live windowing presentation loop, the debug overlay, and
# the DOM surface the input handlers touch. Confined to wasm32, so native
# `cargo test` compiles none of it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# The first-person walk+look controller: the shared Pose, step integration,
# eye seating, and camera view-projection the walk consumes each frame.
axiom-fp-controller = { path = "../../modules/axiom-fp-controller" }
axiom-windowing = { path = "../../modules/axiom-windowing" }
axiom-debug-overlay = { path = "../../modules/axiom-debug-overlay" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "console",
] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
