[package]
name = "axiom-gallery"
description = "Axiom demo gallery: every browser/WASM demo (rotating-cube, netplay, retro_fps, stress-cubes, growth, roomed-puzzle, quintet, physics-crucible, debug-overlay harness) merged into ONE composition-leaf app crate. Each demo is a module under `src/<demo>/`; the wasm bundle exports one `<demo>_start` entry per demo and the gallery shell boots whichever the user picked. Native agent drivers (retro_fps, growth) and the physics report runner survive as explicit, feature-gated binaries."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
# Every binary is declared explicitly so cargo does not auto-discover retro_fps's
# `render.rs` agent submodule as its own bin (the wasm build must not compile it).
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "retro-fps-agent"
path = "src/retro_fps/bin/agent.rs"
required-features = ["retro-fps-agent"]

[[bin]]
name = "growth-agent"
path = "src/growth/bin/agent.rs"
required-features = ["growth-agent"]

[[bin]]
name = "physics-crucible-report"
path = "src/physics_crucible/main.rs"

[features]
retro-fps-agent = [
    "dep:tiny_http",
    "dep:serde_json",
    "dep:tungstenite",
    "dep:axiom-agent",
    "dep:axiom-perception",
]
retro-fps-agent-render = ["retro-fps-agent", "dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:png"]

growth-agent = [
    "dep:axiom-agent-harness",
    "dep:axiom-perception",
    "dep:axiom-introspect",
    "dep:tiny_http",
    "dep:serde_json",
    "dep:tungstenite",
    "dep:axiom-gpu-backend",
    "dep:png",
    "dep:axiom-canvas2d-backend",
]

[dependencies]
axiom = { path = "../../modules/axiom" }
axiom-kernel = { path = "../../crates/axiom-kernel" }
axiom-math = { path = "../../crates/axiom-math" }
axiom-interface = { path = "../../crates/axiom-interface" }
axiom-host = { path = "../../crates/axiom-host" }
axiom-layout = { path = "../../crates/axiom-layout" }
axiom-space = { path = "../../crates/axiom-space" }
axiom-entropy = { path = "../../crates/axiom-entropy" }
axiom-proc = { path = "../../crates/axiom-proc" }
axiom-runtime = { path = "../../crates/axiom-runtime" }
axiom-physics = { path = "../../modules/axiom-physics" }
axiom-input = { path = "../../modules/axiom-input" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axiom-agent = { path = "../../modules/axiom-agent", optional = true }
axiom-perception = { path = "../../modules/axiom-perception", optional = true }
axiom-agent-harness = { path = "../../modules/axiom-agent-harness", optional = true }
axiom-introspect = { path = "../../crates/axiom-introspect", optional = true }
axiom-gpu-backend = { path = "../../modules/axiom-gpu-backend", features = ["offscreen"], optional = true }
axiom-canvas2d-backend = { path = "../../modules/axiom-canvas2d-backend", optional = true }
tiny_http = { version = "0.12", optional = true }
serde_json = { version = "1", optional = true }
tungstenite = { version = "0.24", optional = true }
wgpu = { version = "25", optional = true }
bytemuck = { version = "1", optional = true }
pollster = { version = "0.4", optional = true }
png = { version = "0.17", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-windowing = { path = "../../modules/axiom-windowing" }
axiom-debug-overlay = { path = "../../modules/axiom-debug-overlay" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Document",
    "Location",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "DomRect",
    "ImageData",
    "Performance",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "WebSocket",
    "EventSource",
    "MessageEvent",
    "BinaryType",
    "console",
] }

[dev-dependencies]
axiom-recording = { path = "../../modules/axiom-recording" }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
