[package]
name = "axiom-gallery"
description = "Axiom demo gallery: every browser/WASM demo (rotating-cube, netplay, retro_fps, stress-cubes, growth, zanzoban, quintet, physics-crucible, debug-overlay harness) merged into ONE composition-leaf app crate. Each demo is a module under `src/<demo>/`; the wasm bundle exports one `<demo>_start` entry per demo and the gallery shell boots whichever the user picked. Native agent drivers (retro_fps, growth) and the physics report runner survive as explicit, feature-gated binaries."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
# The gallery declares every binary explicitly (the two native agent drivers and
# the physics report runner now live in per-demo subdirs, not at the crate root),
# so cargo must not auto-discover anything — especially retro_fps's `render.rs` agent
# submodule, which the wasm build must never try to compile as its own bin.
autobins = false

# `cdylib` for the single wasm bundle every demo boots from (each demo's
# `#[wasm_bindgen] <demo>_start`); `rlib` so the native test suites and the
# library APIs the agent bins + axiom-shot compose still build and link.
[lib]
crate-type = ["cdylib", "rlib"]

# --- Native agent drivers + the physics report runner (explicit, feature-gated) ---

# retro FPS's native agent driver: drives the headless game through the reusable
# `axiom-agent` module and answers JSON over HTTP. Native-only deps, behind
# `retro-fps-agent` so the default gates and the wasm build never compile it. The
# `render.rs` submodule (offscreen wgpu readback) is gated further behind
# `retro-fps-agent-render`, mirroring the old cartridge's two-feature split.
[[bin]]
name = "retro-fps-agent"
path = "src/retro_fps/bin/agent.rs"
required-features = ["retro-fps-agent"]

# Growth's native agent driver: walks the headless GroundSim through the reusable
# agent harness to the summit. Native-only deps, behind `growth-agent`. (Was
# `axiom-growth`'s `agent` bin / `agent` feature.)
[[bin]]
name = "growth-agent"
path = "src/growth/bin/agent.rs"
required-features = ["growth-agent"]

# The physics crucible's headless report runner (was `axiom-physics-crucible`'s
# implicit `src/main.rs`). Native, no extra features.
[[bin]]
name = "physics-crucible-report"
path = "src/physics_crucible/main.rs"

# The Visual Target 001 runner + convergence comparator. Native-only (offscreen
# render backends + png), so it never enters the wasm bundle or the default gates.
[[bin]]
name = "visual-target"
path = "src/growth/bin/visual_target.rs"
required-features = ["visual-target"]

[features]
# The Visual Target 001 diorama runner + convergence comparator. Reuses the growth
# capture backends (offscreen GPU + software Canvas 2D) and the png codec; all
# native-only optional deps, so the browser bundle never sees them.
visual-target = [
    "dep:axiom-gpu-backend",
    "dep:axiom-canvas2d-backend",
    "dep:png",
]

# Growth headless agent driver. Native-only optional deps. toml/serde/host are now
# always-on normal deps, so they are not listed as `dep:` here.
growth-agent = [
    "dep:axiom-agent-harness",
    "dep:axiom-perception",
    "dep:axiom-introspect",
    "dep:tiny_http",
    "dep:serde_json",
    "dep:tungstenite",
    "dep:axiom-gpu-backend",
    "dep:png",
    "dep:axiom-canvas2d-backend",
]

# Zanzoban agent driver: play the grid puzzle through axiom-agent (native-only).
zanzoban-agent = ["dep:axiom-agent"]

# retro FPS's headless agent server: the neutral-contract agent loop + perception
# adapter + native HTTP/WebSocket bridge. Native-only optional deps.
retro-fps-agent = [
    "dep:tiny_http",
    "dep:serde_json",
    "dep:tungstenite",
    "dep:axiom-agent",
    "dep:axiom-perception",
]
# Adds the native offscreen wgpu renderer so the retro FPS agent can read back
# images (the `render.rs` bin submodule). Native-only.
retro-fps-agent-render = [
    "retro-fps-agent",
    "dep:wgpu",
    "dep:bytemuck",
    "dep:pollster",
    "dep:png",
]

# Native + wasm dependencies, shared across demos. Everything here builds on
# native (so `cargo test --workspace` exercises every demo's pure game core) and
# on wasm (the live browser arms). All paths are `../../{modules,crates}` because
# the gallery sits at the same `apps/<name>` depth the old per-demo crates did.
[dependencies]
# The engine umbrella (module `engine`): App/scene/camera/render authoring + the
# live wgpu backend (wasm32). Used by rotating-cube, netplay, retro_fps, stress-cubes,
# growth, physics-crucible.
axiom = { path = "../../modules/axiom" }
# Layers used by the pure game cores (deterministic primitives, geometry, layout,
# the proc/space content substrate, the fixed-step runtime, the introspection
# surface). Promoted to always-on because at least one demo needs each on native.
axiom-kernel = { path = "../../crates/axiom-kernel" }
axiom-math = { path = "../../crates/axiom-math" }
axiom-interface = { path = "../../crates/axiom-interface" }
axiom-host = { path = "../../crates/axiom-host" }
axiom-layout = { path = "../../crates/axiom-layout" }
axiom-space = { path = "../../crates/axiom-space" }
# Deterministic, address-keyed entropy streams — the growth worldgen RNG (replaces
# the app-local splitmix64 duplicate; the sphere-point sampler graduated to axiom-math).
axiom-entropy = { path = "../../crates/axiom-entropy" }
# Coherent noise (gradient/Perlin + FBM + domain warp) for growth's worldgen.
axiom-noise = { path = "../../crates/axiom-noise" }
# Spherical topology (geodesic icosphere + dual region-adjacency graph + ring
# validation) for growth's planet worldgen.
axiom-geosphere = { path = "../../crates/axiom-geosphere" }
# Deterministic biome classification (growth's climate lens): BiomeApi::temperature
# + classify_climate own the latitude/elevation temperature and temperature x
# moisture biome lookup the growth sampler used to inline.
axiom-biome = { path = "../../modules/axiom-biome" }
# The graduated planet-generation pipeline (feature module): PlanetGenApi::generate
# composes the geosphere topology + thirteen branchless worldgen stages into a
# durable PlanetSurfaceAtlas, and answers deterministic sample/locate queries. The
# growth app builds its PlanetGenParams from the genome and re-exports the atlas
# value types the rest of the app names.
axiom-planetgen = { path = "../../modules/axiom-planetgen" }
# Graph-hydrology field solvers (pit-fill, receivers, flow accumulation, erosion,
# ocean distance) over the geosphere region graph; the worldgen hydrology stages
# are thin wrappers over this layer.
axiom-hydrology = { path = "../../crates/axiom-hydrology" }
axiom-proc = { path = "../../crates/axiom-proc" }
# Generic bounded rejection-sampling harness (sample_until_valid): the growth
# preset genome sampler draws candidates through it until one satisfies the band.
axiom-proc-validate = { path = "../../crates/axiom-proc-validate" }
axiom-runtime = { path = "../../crates/axiom-runtime" }
# The physics module under test (physics-crucible), composed only through PhysicsApi.
axiom-physics = { path = "../../modules/axiom-physics" }
# The engine input module (zanzoban touch swipes).
axiom-input = { path = "../../modules/axiom-input" }
# The first-person walk+look controller (forest_walk + generia): the shared Pose,
# step integration, eye seating, and camera view-projection both demos consume.
axiom-fp-controller = { path = "../../modules/axiom-fp-controller" }
# The residency-ring module (growth's chunk streamer): owns which chunk coords
# are resident + the deterministic load/unload delta as the player moves. The
# app pairs it with its own Chunk payloads.
axiom-streaming = { path = "../../modules/axiom-streaming" }
axiom-scatter = { path = "../../modules/axiom-scatter" }
axiom-world = { path = "../../modules/axiom-world" }
# The domain-neutral heightfield mesher (growth's far/snapshot terrain geometry):
# grid config + a height callback in, positions/normals/indices out. The app
# decorates the neutral mesh with its colour/vista/biome content.
axiom-terrain-mesh = { path = "../../modules/axiom-terrain-mesh" }
# The articulated box-figure vocabulary (sports lab's humanoid dummy + player body).
axiom-figure = { path = "../../modules/axiom-figure" }
# Recipe-baked procedural textures (sports lab's field markings + ball skins).
axiom-proc-texture = { path = "../../crates/axiom-proc-texture" }
axiom-recipe = { path = "../../crates/axiom-recipe" }
# Hand-editable level/data format used by several demos' codecs (zanzoban,
# rotating-cube's data-package test) and the growth agent's tag/directive TOML.
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Native-only optional deps for the agent drivers. Confined to non-wasm so the
# browser bundle never sees them; pulled in only by the agent features above.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# retro FPS agent substrate + the game-agnostic perception model (shared with growth).
axiom-agent = { path = "../../modules/axiom-agent", optional = true }
axiom-perception = { path = "../../modules/axiom-perception", optional = true }
# Growth agent: the reusable harness (composes axiom-agent), the introspection
# surface holding world tags, and the two native screenshot backends.
axiom-agent-harness = { path = "../../modules/axiom-agent-harness", optional = true }
axiom-introspect = { path = "../../crates/axiom-introspect", optional = true }
axiom-gpu-backend = { path = "../../modules/axiom-gpu-backend", features = ["offscreen"], optional = true }
axiom-canvas2d-backend = { path = "../../modules/axiom-canvas2d-backend", optional = true }
# Shared native server/codec deps for both agent drivers.
tiny_http = { version = "0.12", optional = true }
serde_json = { version = "1", optional = true }
tungstenite = { version = "0.24", optional = true }
# Offscreen PNG capture for growth's visual-target runner and retro FPS's agent
# image readback.
png = { version = "0.17", optional = true }
# retro FPS's offscreen agent renderer (the `render.rs` bin submodule) talks to
# wgpu directly — kept in the bin, never the cdylib, behind `retro-fps-agent-render`.
wgpu = { version = "25", optional = true }
bytemuck = { version = "1", optional = true }
pollster = { version = "0.4", optional = true }

# Browser/live arm only: the wasm-bindgen glue, panic hook, the live windowing
# presentation loop, the debug overlay, and the union of every demo's web-sys
# surface. Confined to wasm32, so native `cargo test --workspace` compiles none of
# it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-windowing = { path = "../../modules/axiom-windowing" }
axiom-debug-overlay = { path = "../../modules/axiom-debug-overlay" }
# generia's autonomous benchmark walk drives the camera through the first-person
# control harness (composes axiom-agent). wasm-only here; the native agent drivers
# depend on it through the `growth-agent` feature above.
axiom-agent-harness = { path = "../../modules/axiom-agent-harness" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Document",
    "Location",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "DomRect",
    "ImageData",
    "Performance",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "WheelEvent",
    "WebSocket",
    "EventSource",
    "MessageEvent",
    "BinaryType",
    "Storage",
    "console",
] }

# Native integration-test only: the deterministic frame recorder (retro FPS's
# replay-determinism proof). Never enters the wasm bundle.
[dev-dependencies]
axiom-recording = { path = "../../modules/axiom-recording" }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
