[package]
name = "axiom-game-runtime"
description = "Axiom wasm-bindgen game runtime: the native boundary the TypeScript authoring SDK (@axiom/game) drives. Owns a deterministic fixed-step accumulator over a RunningApp (banks real elapsed nanoseconds into whole fixed ticks) and the JS-facing game object. Depends only on the `axiom` umbrella; the deterministic core is the rlib part, slice-tested natively, and the wasm32 entry is the requestAnimationFrame-bound boundary the SDK binds."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axiom = { path = "../../modules/axiom" }

# SPEC-01 RNG seam: entropy facade keyed at the root address (axiom-space).
axiom-entropy = { path = "../../crates/axiom-entropy" }
axiom-space = { path = "../../crates/axiom-space" }

# SPEC-10 physics: rigid-body world stepped via `runtime`'s `RuntimeStep`.
axiom-physics = { path = "../../modules/axiom-physics" }
axiom-runtime = { path = "../../crates/axiom-runtime" }
axiom-kernel = { path = "../../crates/axiom-kernel" }

# SPEC-05 input: per-tick intent-snapshot facade.
axiom-input = { path = "../../modules/axiom-input" }

# SPEC-07 timers/state machines, SPEC-09 tweens.
axiom-tick = { path = "../../modules/axiom-tick" }
axiom-tween = { path = "../../modules/axiom-tween" }

# SPEC-06 grid/pathfinding, SPEC-08 audio.
axiom-grid = { path = "../../modules/axiom-grid" }
axiom-audio = { path = "../../modules/axiom-audio" }

# SPEC-03/SPEC-11 math: the `v3`/`mat4`/`quat` ops forward to `MathApi`/`Quat`,
# which the prelude does not re-export.
axiom-math = { path = "../../crates/axiom-math" }

# SPEC-09 UI: immediate-mode HUD surface + the responsive layout solver.
axiom-interface = { path = "../../crates/axiom-interface" }
axiom-layout = { path = "../../crates/axiom-layout" }

axiom-host = { path = "../../crates/axiom-host" }

# SPEC-10 2D drawing.
axiom-draw2d = { path = "../../modules/axiom-draw2d" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
# SPEC-11 3D: live wgpu/WebGL2/Canvas2D presentation, wasm32-only.
axiom-windowing = { path = "../../modules/axiom-windowing" }
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "AudioContext",
    "BaseAudioContext",
] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
